# ocaml-readline

./: dune-project  readline.opam
example/: dune  main.ml
lib/: readline_stub.c
test/: dune
